# spelling-tutor-agent

./: .coverage  .env.example  .gitignore  QUICK_START.md  README.md  director_livekit_voice_integration.yaml  generate_livekit_token.py  list_words.py  manage_agent.sh  pyproject.toml  run_director.py  test_child_friendly.py  test_livekit.py
.adw/: TESTING_GUIDE_conversation_fix.md  TEST_RESULTS_conversation_fix.md  task_fix_conversation_jumping.md
.claude/: GIT-QUICK-REFERENCE.md  GIT-WORKFLOW.md  SETUP-GIT-HELPERS.md  git-aliases.sh  git-helpers.sh  project-context.md
.claude/commands/: knowledge_gap_check.md  review.md  spec.md  tac-process.md
.claude/meta-prompts/: README.md
.claude/validation-checklists/: bug-validation.md
adw/: README.md
docs/: SIMPLE_TASK_SDLC.md  livekit_agents_framework.md  livekit_plugins.md  livekit_voice_assistant.md
docs/templates/: simple-bug-fix-template.md  simple-chore-template.md  simple-feature-template.md
examples/: livekit_basic_voice_agent.py
specs/: child-friendly-responses-spec.md  issue-4-adw-8eb82fd8-sdlc_planner-simple-task-sdlc.md  issue-none-adw-none-sdlc_planner-fix-robotic-agent-responses.md  spec_livekit_redo.md  specs_mvp.md
src/spelling_tutor/: agent.py  agent_worker.py  config.py  database.py  main.py  tutor_logic.py  types.py  word_list_loader.py  word_manager.py
src/spelling_tutor_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tac-core-plugin/: .env.example  .gitignore  CLAUDE.md  INSTALLATION.md  PLUGIN_STRUCTURE.txt  start_adw_services_simple.sh
tac-core-plugin/.claude/: FILE_ORGANIZATION.md  (+1 more)
templates/: project-context template.md  spec-template.md
tests/: test_agent_instructions.py  test_agent_integration.py  test_agent_simulation.py  test_agent_simulation_standalone.py  test_database.py  test_integration.py  test_sdlc_documentation.py  test_tutor_logic.py  test_word_manager.py
(+124 files in other folders)
