[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spelling-tutor-agent"
version = "0.1.0"
description = "AI-powered spelling tutor with voice interaction"
authors = [{name = "William Fung"}]
requires-python = ">=3.8"
dependencies = [
    "livekit>=0.15.0",
    "livekit-agents>=1.2.14",           # ⬆️ Update from 0.8.0
    "livekit-plugins-openai>=1.2.6",    # ⬆️ Update from 0.6.0
    "livekit-plugins-deepgram>=1.2.14", # ⬆️ Update from 0.6.0
    "openai>=1.0.0",
    "deepgram-sdk>=3.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"